--- a/web/blog.html
+++ b/web/blog.html
@@ -44,8 +44,19 @@
       </div>
     </div>
     <!-- contenido -->
-    <div class="row">
-      <div class="large-6 columns text-center">
+    <div class="row contenido">
+      <div class="large-4 columns text-center">
+        <img src="http://placehold.it/700x300">
+        <h5>Titulo</h5>
+        <div class="row">
+          <div class="large-4 columns meta"><i class="fi-calendar"></i> fecha</div>
+          <div class="large-4 columns meta"><i class="fi-torsos"></i> user</div>
+          <div class="large-4 columns meta"><i class="fi-comments"></i> comentarios</div>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <a href="#" class="button warning">Seguir leyendo</a>
+      </div>
+      <div class="large-4 columns text-center">
         <img src="http://placehold.it/700x300">
         <h2>Titulo</h2>
         <div class="row">
@@ -56,7 +67,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <a href="#" class="button warning">Seguir leyendo</a>
       </div>
-      <div class="large-6 columns text-center">
+      <div class="large-4 columns text-center">
         <img src="http://placehold.it/700x300">
         <h2>Titulo</h2>
         <div class="row">
