--- a/web/index.html
+++ b/web/index.html
@@ -16,11 +16,39 @@
       <div class="large-12 columns text-center head">
         <img src="img/logo.png">
       </div>
-      <div class="large-12 columns">
+
+      <!--<div class="large-12 columns">
         <div>
           <img src="img/s1.jpg">
         </div>
+      </div>-->
+
+      <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit data-orbit>
+        <ul class="orbit-container">
+          <!--<button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
+          <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>-->
+          <li class="orbit-slide text-center">
+            <img src="img/s1.jpg">
+          </li>
+          <li class="orbit-slide text-center">
+            <img src="img/s1.jpg">
+          </li>
+          <li class="orbit-slide text-center">
+            <img src="img/s1.jpg">
+          </li>
+          <li class="orbit-slide text-center">
+            <img src="img/s1.jpg">
+          </li>
+        </ul>
+        <nav class="orbit-bullets">
+          <button class="is-active" data-slide="0"><span class="show-for-sr">First slide details.</span><span class="show-for-sr">Current Slide</span></button>
+          <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
+          <button data-slide="2"><span class="show-for-sr">Second slide details.</span></button>
+          <button data-slide="3"><span class="show-for-sr">Second slide details.</span></button>
+        </nav>
       </div>
+
+
     </div>
     <!-- navegacion -->
     <div class="expanded row collapse navegacion" data-sticky-container>
@@ -92,6 +120,97 @@
       </div>
       <div class="large-3 columns text-center">
         <h3>Productos</h3>
+        <hr>
+        <img src="http://placehold.it/150x150">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <a href="#" class="button warning radius">LEER MÁS</a>
+      </div>
+    </div>
+    <!-- servicios -->
+    <div id="panel2" class="expanded row servicios">
+      <div class="large-3 columns text-center">
+        <h3>Servicio 1</h3>
+        <hr>
+        <img src="http://placehold.it/150x150">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <a href="#" class="button warning radius">LEER MÁS</a>
+      </div>
+      <div class="large-3 columns text-center">
+        <h3>Servicio 2</h3>
+        <hr>
+        <img src="http://placehold.it/150x150">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <a href="#" class="button warning radius">LEER MÁS</a>
+      </div>
+      <div class="large-3 columns text-center">
+        <h3>Servicio 3</h3>
+        <hr>
+        <img src="http://placehold.it/150x150">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <a href="#" class="button warning radius">LEER MÁS</a>
+      </div>
+      <div class="large-3 columns text-center">
+        <h3>Servicio 4</h3>
+        <hr>
+        <img src="http://placehold.it/150x150">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <a href="#" class="button warning radius">LEER MÁS</a>
+      </div>
+
+      <div class="large-3 columns text-center">
+        <h3>Servicio 5</h3>
+        <hr>
+        <img src="http://placehold.it/150x150">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <a href="#" class="button warning radius">LEER MÁS</a>
+      </div>
+      <div class="large-3 columns text-center">
+        <h3>Servicio 6</h3>
+        <hr>
+        <img src="http://placehold.it/150x150">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <a href="#" class="button warning radius">LEER MÁS</a>
+      </div>
+      <div class="large-3 columns text-center">
+        <h3>Servicio 7</h3>
+        <hr>
+        <img src="http://placehold.it/150x150">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <a href="#" class="button warning radius">LEER MÁS</a>
+      </div>
+      <div class="large-3 columns text-center">
+        <h3>Servicio 8</h3>
+        <hr>
+        <img src="http://placehold.it/150x150">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <a href="#" class="button warning radius">LEER MÁS</a>
+      </div>
+    </div>
+    <!-- noticias -->
+    <div id="panel3" class="expanded row noticias">
+      <div class="large-3 columns text-center">
+        <h3>Noticia 1</h3>
+        <hr>
+        <img src="http://placehold.it/150x150">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <a href="#" class="button warning radius">LEER MÁS</a>
+      </div>
+      <div class="large-3 columns text-center">
+        <h3>Noticia 2</h3>
+        <hr>
+        <img src="http://placehold.it/150x150">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <a href="#" class="button warning radius">LEER MÁS</a>
+      </div>
+      <div class="large-3 columns text-center">
+        <h3>Noticia 3</h3>
+        <hr>
+        <img src="http://placehold.it/150x150">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <a href="#" class="button warning radius">LEER MÁS</a>
+      </div>
+      <div class="large-3 columns text-center">
+        <h3>Noticia 4</h3>
         <hr>
         <img src="http://placehold.it/150x150">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
