--- a/web/blog.html
+++ b/web/blog.html
@@ -44,6 +44,18 @@
       </div>
     </div>
     <!-- contenido -->
+    <div class="row sub-navegacion">
+      <div class="large-12 columns">
+        <div class="menu-centered">
+          <ul class="menu">
+            <li class="current-menu-item"><a href="#">Mineria</a></li>
+            <li><a href="#">Industria</a></li>
+            <li><a href="#">Construccion</a></li>
+            <li><a href="#">Ingenieria</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <div class="row contenido">
       <div class="large-4 columns text-center">
         <img src="http://placehold.it/700x300">
