--- a/web/index.html
+++ b/web/index.html
@@ -218,7 +218,7 @@
       </div>
     </div>
     <!-- proyectos -->
-    <div class="expanded row collapse">
+    <div class="row collapse">
       <div class="large-3 columns text-center efecto2">
         <img src="img/img1.jpg">
         <div class="caption2">
@@ -253,40 +253,40 @@
       <h3 class="text-center">Nuestros clientes nos aman</h3>
     </div>
     <div class="testimonios orbit" role="region" aria-label="Favorite Space Pictures" data-orbit data-orbit data-options="animInFromLeft:fade-in; animInFromRight:fade-in; animOutToLeft:fade-out; animOutToRight:fade-out;">
+      <nav class="orbit-bullets">
+        <button class="is-active" data-slide="0">
+          <span><img src="http://placehold.it/150x50"></span>
+          <span class="current"><img src="http://placehold.it/150x50"></span>
+        </button>
+        <button data-slide="1"><span><img src="http://placehold.it/150x50"></span></button>
+        <button data-slide="2"><span><img src="http://placehold.it/150x50"></span></button>
+        <button data-slide="3"><span><img src="http://placehold.it/150x50"></span></button>
+      </nav>
       <ul class="orbit-container">
         <!--<button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
         <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>-->
         <li class="orbit-slide text-center">
           <div>
-            <img src="http://placehold.it/150x50">
             <blockquote class="text-center">1 Those people who think they know everything are a great annoyance to those of us who do.<cite>Isaac Asimov</cite></blockquote>
           </div>
         </li>
         <li class="orbit-slide text-center">
           <div>
-            <img src="http://placehold.it/150x50">
             <blockquote class="text-center">2 Those people who think they know everything are a great annoyance to those of us who do.<cite>Isaac Asimov</cite></blockquote>
           </div>
         </li>
         <li class="orbit-slide text-center">
           <div>
-            <img src="http://placehold.it/150x50">
             <blockquote class="text-center">3 Those people who think they know everything are a great annoyance to those of us who do.<cite>Isaac Asimov</cite></blockquote>
           </div>
         </li>
         <li class="orbit-slide text-center">
           <div>
-            <img src="http://placehold.it/150x50">
             <blockquote class="text-center">4 Those people who think they know everything are a great annoyance to those of us who do.<cite>Isaac Asimov</cite></blockquote>
           </div>
         </li>
       </ul>
-      <nav class="orbit-bullets">
-        <button class="is-active" data-slide="0"><span class="show-for-sr">First slide details.</span><span class="show-for-sr">Current Slide</span></button>
-        <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
-        <button data-slide="2"><span class="show-for-sr">Second slide details.</span></button>
-        <button data-slide="3"><span class="show-for-sr">Second slide details.</span></button>
-      </nav>
+      
     </div>
     <!-- footer -->
     <div class="expanded row footer">
