--- a/web/index.html
+++ b/web/index.html
@@ -207,28 +207,28 @@
           <div class="large-12 columns final">
             <div class="row">
               <div class="small-6 medium-3 columns text-center">
-                <h4>NewsLetter</h4>
-                <a href="#"><img src="img/1.jpg"></a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua.</p>
+                <a href="#">
+                  <h4>NewsLetter</h4>
+                  <img src="img/1.jpg">
+                </a>
               </div>
               <div class="small-6 medium-3 columns text-center">
-                <h4>Servicios</h4>
-                <a href="#"><img src="img/2.jpg"></a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua.</p>
+                <a href="#">
+                  <h4>Servicios</h4>
+                  <img src="img/2.jpg">
+                </a>
               </div>
               <div class="small-6 medium-3 columns text-center">
-                <h4>Areas</h4>
-                <a href="#"><img src="img/3.jpg"></a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua.</p>
+                <a href="#">
+                  <h4>Areas</h4>
+                  <img src="img/3.jpg">
+                </a>
               </div>
               <div class="small-6 medium-3 columns text-center">
-                <h4>Proyectos</h4>
-                <a href="#"><img src="img/4.jpg"></a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua.</p>
+                <a href="#">
+                  <h4>Proyectos</h4>
+                  <img src="img/4.jpg">
+                </a>
               </div>
             </div>
           </div>
